--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>On This Day</title>
+    <link rel="icon" href="/Ast/Image/icon.png" type="image/png">
     <link href="/Ast/Style/style.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/typeit@8.7.1/dist/index.umd.js"></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="/Ast/Script/script1.js"></script>
 </head>
 <body class="font bg-[#011024]">
+    <div id="particles-js"></div>
     <div class="fixed top-0 left-0 w-full h-[300vh] bg-[#011024] opacity-0 animasiLoad" id="load"></div>
 
-    <div class="bg-[#011024] w-full h-[100vh]">
+    <div class="w-full h-[100vh]">
         <div class="bg-transparent w-full h-[10vh] flex border-b-2 border-[#ffffff05]" id="head">
         </div>
 
@@ -26,12 +29,13 @@
             </div>
         </div>
         
-        <div class="w-[100%] h-[50vh] md:h-[100vh] bg-blue-400 rounded-t-full p-[15vh] shadow-[0_0_20px_black] mt-[10vh] md:mt-0">
+        <div class="w-[100%] h-[50vh] md:h-[100vh] bg-blue-400 rounded-t-full p-[15vh] shadow-[0_0_20px_black] mt-[5vh] md:mt-0">
             <div class="bg-transparent w-full h-[10vh] flex justify-center items-center mt-[-5vh] md:mt-0">
                 <button class="tracking-[0.3em]">Scroll untuk melihat!</button>
             </div>
         </div>
     </div>
+
 
     <script>
         new TypeIt("#typing", {
@@ -55,5 +59,50 @@
         .go();
     </script>
     <script src="/Ast/Script/script.js"></script>
+    <script>
+        particlesJS("particles-js", {
+            "particles": {
+            "number": {
+                "value": 25,
+                "density": {
+                "enable": true,
+                "value_area": 1000
+                }
+            },
+            "color": {
+                "value": "#ffffff"
+            },
+            "shape": {
+                "type": "circle"
+            },
+            "opacity": {
+                "value": 0.05
+            },
+            "size": {
+                "value": 2
+            },
+            "line_linked": {
+                "enable": true,
+                "distance": 250,
+                "color": "#ffffff",
+                "opacity": 0.05,
+                "width": 1
+            },
+            "move": {
+                "enable": true,
+                "speed": 2
+            }
+            },
+            "interactivity": {
+            "events": {
+                "onhover": {
+                "enable": true,
+                "mode": "repulse"
+                }
+            }
+            },
+            "retina_detect": true
+        });
+    </script>
 </body>
 </html>
